www/css/home.css
/* ... */
/* iPhone 6 in portrait */

@media only screen
and (min-device-width : 375px)
and (max-device-width : 667px)
and (orientation : portrait) {

div.row.menu{ top: 70% !important;
        position: fixed;
        width: 100% !important;
        margin-left:0px;
        height: 6% !important;
     }
    .footNavigation{ width:6%; margin-top: 15%; margin-left: 45%; z-index: 1000; display:block !important }
    .footerNavswipeUP{ margin-top:-6%; }
}

 .globalmenu ul li a span.commenticon{ background: url(../images/note_gray.png) no-repeat; width: 44px; height: 44px; display: inline-block; background-size: 80% 80%; }


 /* Iphone 5s Portrait */
 @media only screen
and (min-device-width : 320px)
and (max-device-width : 568px)
and (orientation : portrait) {
.widget-maincontent-div .homeRow-fluid { height: 480px;}
}

 /* Iphone 5s Portrait */
 @media only screen
and (min-device-width : 320px)
and (max-device-width : 568px)
and (orientation : landscape) {
.widget-maincontent-div .homeRow-fluid { height: 520px;}
}

@media handheld, only screen and (max-width: 736px) { }

 

